# flux

./: .gitignore  AUDIT_PREP_REPORT.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  audit-context.md  flux-vulnerability-report.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-performance/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-network-protocols/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-RESEARCH.md
.planning/phases/04-user-experience/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-RESEARCH.md
.planning/phases/05-discovery-security/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-RESEARCH.md
.planning/phases/06-tui-mode/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-RESEARCH.md
.planning/phases/07-sync-mode/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: KEYBINDINGS.md  SETUP.md
src/: error.rs  main.rs
src/backend/: local.rs  mod.rs  sftp.rs  smb.rs  webdav.rs
src/cli/: args.rs
src/config/: aliases.rs  mod.rs  paths.rs  types.rs
src/discovery/: mdns.rs  mod.rs  service.rs
src/net/: codephrase.rs  mod.rs  protocol.rs  receiver.rs  sender.rs
src/progress/: bar.rs
src/protocol/: auth.rs  mod.rs  parser.rs
src/queue/: history.rs  state.rs
src/security/: crypto.rs  mod.rs  trust.rs
src/sync/: engine.rs  mod.rs  plan.rs  schedule.rs  watch.rs
src/transfer/: checksum.rs  chunk.rs  compress.rs  conflict.rs  copy.rs  filter.rs  mod.rs  parallel.rs  resume.rs  stats.rs  throttle.rs  verify.rs
src/tui/: action.rs  app.rs  event.rs  mod.rs  terminal.rs  theme.rs
src/tui/components/: dashboard.rs  file_browser.rs  history_view.rs  mod.rs  queue_view.rs  status_bar.rs
tests/: integration.rs  integration_phase2.rs  phase4_integration.rs  phase5_integration.rs  protocol_detection.rs  sftp_backend.rs  smb_backend.rs  sync_tests.rs  webdav_backend.rs
