[package]
name = "flux"
version = "0.1.0"
edition = "2021"
description = "Blazing-fast file transfer"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime (foundation for future phases)
tokio = { version = "1", features = ["full"] }

# Progress
indicatif = "0.18"

# File operations
walkdir = "2.5"
globset = "0.4"

# Config & serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
