[package]
name = "flux"
version = "0.1.0"
edition = "2021"
description = "Blazing-fast file transfer"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Async runtime (foundation for future phases)
tokio = { version = "1", features = ["full"] }

# Progress
indicatif = "0.18"

# File operations
walkdir = "2.5"
globset = "0.4"

# Config & serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }

# CLI completions (Phase 4)
clap_complete = "4.5"

# Performance (Phase 2)
blake3 = "1.8"
zstd = "0.13"
rayon = "1.10"
bytesize = "1.3"

# URL parsing (Phase 3: protocol detection)
url = "2"
rpassword = "7"

# SFTP backend (Phase 3: network protocols)
ssh2 = { version = "0.9", features = ["vendored-openssl"] }

# WebDAV backend (Phase 3: network protocols)
reqwest = { version = "0.12", features = ["blocking"] }

# Discovery (Phase 5)
mdns-sd = "0.18"
gethostname = "0.5"

# Encryption (Phase 5)
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.9"
base64 = "0.22"

# Network protocol (Phase 5)
tokio-util = { version = "0.7", features = ["codec"] }
bincode = { version = "2", features = ["serde"] }
futures = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
